[project]
name = 'firehose'
version = '0.1.0.dev0'
description = 'A code generation tool'
readme = 'README.md'
authors = [ { name = 'IS4S', email = 'pntos@is4s.com' } ]
requires-python = '>=3.10'

dependencies = [
    'aspn @ git+https://github.com/Open-PNT/ASPN-ICD.git@b2e7b64067b9cd0171f02ffe773c1174a7e2eb96',
    'cxxheaderparser==1.6.2',
    'isort',
    'lcm>=1,<2',
    'numpy>=2,<3',
    'pyyaml',
]

[dependency-groups]
dev = [
    'black==22.12.0',
    'pip',
    'meson>=1,<1.10',
]

[tool.black]
line-length = 79
skip-magic-trailing-comma = true
skip-string-normalization = true
